# BDI-ED

./: .gitignore  LICENSE  README.md  baseMetrics.py  contourMergeTrees_helpers.py  distanceMatrixComparison_cluster.py  distanceMatrixComparison_outlier.py  distanceMatrixComparison_outlier2.py  mergeTreeEdit_branch.py  mergeTreeEdit_constrained.py  timeTrack_heatedCylinder2D_branch.py
cpp/: CMakeLists.txt  editDistance_branch.cxx  editDistance_branch.h  editDistance_constrained.cxx  editDistance_constrained.h  editDistance_path.cxx  editDistance_path.h  munkres.hpp  ted.cxx
examples/: distanceMatrixComparison_cluster.py  distanceMatrixComparison_horizontal.py  distanceMatrixComparison_outlier.py
mergetree/: mergetree.py
mted/: baseMetrics.py  branch_mapping_dist.py  constrained_edist_mt.py  deform_edist.py  path_mapping_dist.py
scripts/: get_data.sh
test_datasets/branchVSconstrained_cluster/: matrix_wasserstein_cpp.txt
test_datasets/branchVSconstrained_outlier/: matrix_wasserstein_cpp.txt
test_datasets/branchVSconstrained_outlier2/: test_MB_noise.vtm
test_datasets/branchVSconstrained_outlier_noisy/: test_MB.vtm
